syntax = "proto3";

package estudiantes;

import "google/protobuf/empty.proto";

// Entidades
message Estudiante {
    string ci = 1;
    string nombres = 2;
    string apellidos = 3;
    string carrera = 4;
}

message Curso {
    string codigo = 1;
    string nombre = 2;
    string docente = 3;
}

// Mensajes para RPCs
message EstudianteRequest {
    string ci = 1;
}

message EstudianteResponse {
    Estudiante estudiante = 1;
}

message CursoRequest {
    string codigo = 1;
}

message CursoResponse {
    Curso curso = 1;
}

message InscripcionRequest {
    string ci_estudiante = 1;
    string codigo_curso = 2;
}

message InscripcionResponse {
    string mensaje = 1;
}

message EstudiantesList {
    repeated Estudiante estudiantes = 1;
}

message CursosList {
    repeated Curso cursos = 1;
}

// Servicio
service EstudianteService {
    rpc AgregarEstudiante (Estudiante) returns (EstudianteResponse);
    rpc ObtenerEstudiante (EstudianteRequest) returns (EstudianteResponse);
    rpc ListarEstudiantes (google.protobuf.Empty) returns (EstudiantesList);
    rpc AgregarCurso(Curso) returns (CursoResponse);
    rpc InscribirEstudiante(InscripcionRequest) returns (InscripcionResponse);
    rpc ListarCursosDeEstudiante(EstudianteRequest) returns (CursosList);
    rpc ListarEstudiantesDeCurso(CursoRequest) returns (EstudiantesList);
}
